# redlens

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DESIGN.md  Makefile  README.md  ROADMAP.md  SECURITY.md  pyproject.toml  render.py
.githooks/: pre-push
.github/: pull_request_template.md
.github/workflows/: ci.yml  release.yml
data/: top100_moderators.json  top100_moderators_raw.json
docs/: relevance-filter.md
notebooks/: explore.ipynb
notes/: NOTES.md
redditpages/: __init__.py  analytics.py  arctic.py  cli.py  config.py  db.py  errors.py  explore.py  ingest.py  models.py  onboarding.py
redlens/: __init__.py  analytics.py  arctic.py  cache.py  cli.py  completions.py  config.py  constants.py  db.py  discovery.py  doctor.py  errors.py  explore.py  export.py  filter.py  ingest.py  landscape.py  llm.py  models.py  onboarding.py  page.py  sentiment.py  serve.py  summarize.py  topics.py
redlens/data/: popular_subreddits.txt  sentiment_lexicon.txt  stopwords.txt
redlens/prompts/: __init__.py  brands.txt  complaints.txt  coordination.txt  filter.txt  profile.txt  sentiment.txt  subreddits.txt  theme_labels.txt  topic.txt  use_cases.txt
redlens/providers/: reddit.py
redlens/reporting/: __init__.py  explore.py  landscape.py  lda.py  page.py  style.css
redthread/: __init__.py  analytics.py  arctic.py  cli.py  config.py  db.py  errors.py  explore.py  ingest.py  models.py  onboarding.py
scripts/: build_index.py  build_payload.py  build_rich_all.py  explore.py  filter_eval.py  load_moderators.py  migrate_schema.py  pull_dua_lipa.py  sync_important_users.py
tests/: conftest.py  test_analytics.py  test_cache.py  test_completions.py  test_config.py  test_db.py  test_discovery.py  test_doctor.py  test_export.py  test_filter.py  test_integration.py  test_landscape.py  test_lda.py  test_llm.py  test_migrations.py  test_models.py  test_onboarding.py  test_reddit_provider.py  test_sentiment.py  test_serve.py  test_summarize.py  test_sync.py  test_sync_incremental.py  test_topics.py
tests/fixtures/: filter_gold.csv  filter_gold.md
tests/fixtures/filter_gold/: README.md  arc.jsonl  bolt.jsonl  conductor.jsonl  corona.jsonl  dove.jsonl  grid_results.csv  linear.jsonl  monday.jsonl  notion.jsonl  shell.jsonl  square.jsonl
